<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)
  ~   * Created by Gwabstech on 10/8/21, 3:24 PM
  ~   * Copyright (c) 2021 . All rights reserved.
  ~   * Last modified 10/8/21, 3:24 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="@string/bookmakers_partners">
        <menu>
            <group>
                <item
                    android:id="@+id/Melbet"
                    android:title="@string/melbet" />
                <item
                    android:id="@+id/onexbet"
                    android:title="@string/_1xbet" />

            </group>
        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <group >

                <item
                    android:id="@+id/LiveScore"
                    android:visible="false"
                    android:title="@string/live_score" />

                <item

                    android:id="@+id/prevGames"
                    android:title="@string/previous_vip_games" />

                <item

                    android:id="@+id/Share_App"
                    android:title="@string/share_app" />

                <item
                    android:id="@+id/LogOut"
                    android:title="Logout"/>

                <item
                    android:id="@+id/Exit"
                    android:title="@string/exit" />


            </group>
        </menu>

    </item>



</menu>