<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:orientation="vertical"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="4dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#a0ffff"
        app:cardCornerRadius="40dp"
        app:cardElevation="4dp"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/country1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/country"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/date_and_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country"
                android:elevation="1dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/_20_20_2020"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/_3pm"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_and_time"
                android:layout_marginTop="4dp"
                android:elevation="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/manu_vs_arsanal"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/selection_and_odd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/game"
                android:layout_marginTop="4dp"
                android:elevation="1dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tips"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/tips_1"
                    android:textColor="#ED6363"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ODD"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/odd_4_00"
                    android:textColor="#ED6363"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/selection_and_odd"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/won"
                android:textColor="#00ff00"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>




